--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,13 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.1'
     }
     repositories {
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
 }
